Fixing the off-center images issue

--- a/style.less
+++ b/style.less
@@ -433,6 +433,7 @@ p{
 		img{
 			max-width: 960px;
 			display: block;
+			margin: auto;
 		}
 	}
 	
